# utils-api-pipefy

./: .env_modelo  .gitignore  LICENSE  README.md  aa.py  excluidos.xlsx  main.py  pyproject.toml  requirements.txt  yuri.txt
libs/: engine.py  log.py  logger.py  parse_duplicate.py  pipefy.py  utilits_pipe.py
log/: log.py
utils_api_pipefy/: __init__.py
utils_api_pipefy/libs/: engine.py  excepts.py  log.py  pipefy.py  utilits_pipe.py
