[tool.poetry]
name = "utils-api-pipefy"
version = "0.1.1"
description = "Ferramentas de para otimizar o consumo de api do pipefy, trantando os retornos e criando concurrence futures para multi-processamentos."
authors = ["Yuri Motoshima <yurimotoshima@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
requests = "^2.27.1"
pylint = "^2.12.2"
autopep8 = "^1.6.0"
pandas = "^1.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
