[tool.poetry]
name = "utils-api-pipefy"
version = "0.2.1"
description = "Ferramentas para otimizar o consumo paralelizado de api do pipefy, trantando os retornos."
long_description = file: README.md
url = https://github.com/YuriMotoshima/utils-api-pipefy
authors = ["Yuri Motoshima <yurimotoshima@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
requests = "^2.27.1"
pylint = "^2.12.2"
autopep8 = "^1.6.0"
pandas = "^1.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
